# TinyLog

./: CMakeLists.txt  LICENSE  README.md  dllmain.cc  log.cc  log.hpp  tiny.rc  winbuild.bat
specs/001-singleton-logger-dll/: spec.md
specs/001-singleton-logger-dll/checklists/: requirements.md
